fix swagger anotation code and typo
